[package]
edition = "2021"
name = "vanity-gg18"
version = "0.1.0"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
hex = "0.4.3"
rand = "0.8"
reqwest = { version = "0.9", default-features = false }
rocket = { version = "0.5.0-rc.1", default-features = false, features = [
    "json",
] }
secp256k1 = { version = "0.20", features = ["global-context"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
sha3 = "0.10"
tokio = { version = "1", default-features = false, features = ["macros"] }
uuid = { version = "0.8", features = ["v4"] }

[dependencies.paillier]
default-features = false
package = "kzen-paillier"
version = "0.4.2"

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
rev = "9193fb7"

[dependencies.curv-kzen]
default-features = false
version = "0.9"
